# Finco

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  PLAN.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  debug_ocr.py  main.py  pyproject.toml  requirements.txt
core/: config.py  database.py  models.py  schemas.py  settings.py
docs/: OCR_ISSUES.md
services/: account_service.py  backup_service.py  category_service.py  dashboard_service.py  participant_service.py  transaction_service.py
services/ocr/: engine.py  layout_analyzer.py  models.py  ocr_service.py  onnx_engine.py  pdf_converter.py  preprocessor.py
services/ocr/parsers/: __init__.py  amex.py  base.py  fallback.py  mastercard.py  registry.py  visa.py
tests/: conftest.py
tests/integration/: test_ocr_pipeline.py  test_ui_flows.py
tests/unit/: test_category_service.py  test_dashboard_service.py  test_models.py  test_ocr_parsers.py  test_transaction_service.py
ui/: app.py  theme.py
ui/components/: card.py  charts.py  data_table.py  dialogs.py  empty_state.py  keyboard.py  loading_overlay.py  onboarding.py  sidebar.py  snack_undo.py  split_expense_card.py  summary_cards.py
ui/views/: accounts_view.py  categories_view.py  dashboard_view.py  ocr_scan_view.py  transactions_view.py
utils/: constants.py  helpers.py  threading.py
