[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finco"
version = "0.1.0"
description = "Finanzas Compartidas — gestión de gastos con OCR"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.86.0",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "pdf2image>=1.17.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=8.0",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
